設定 h3 字母字體大寫

--- a/2022-03-08 hw-1.css
+++ b/2022-03-08 hw-1.css
@@ -32,6 +32,9 @@ section.tool article{
   width: 320px;
   margin: 1px;
 }
+h3{
+  text-transform: uppercase;
+}
 
 section.tool article.reverse .visit{
   display: flex;
