--- a/toyota.css
+++ b/toyota.css
@@ -17,6 +17,7 @@
       border: springgreen 5px solid;
 }
 .img{
+  position: relative;
   width: 600px;
   height: 400px;
 }
@@ -59,4 +60,30 @@ h2{
       background-color: #aaa;
       left: 300px;
       bottom: -320px;
+}
+
+.descript{
+  background-color: #ddd;
+  width: 500px;
+  padding: 10px;
+  top: -30px;
+  left: -160px;
+  z-index: 1;
+}
+.title{
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 5px;
+  
+}
+.h3{
+  flex-grow: 1;
+}
+.line{
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-right: 10px;
+  margin-left: 10px;
+  border-top: 1px #000 solid;
+  flex-grow: 3;
 }
