--- a/toyota.css
+++ b/toyota.css
@@ -5,24 +5,62 @@
 }
 .wrap{
   width: 960px;
+  height: 1000px;
   margin: auto;
   border: orange 1px solid;
+  display: flex;
+  flex-wrap: wrap;
+  /* justify-content: space-around; */
+  /* align-content: flex-start; */
+  /* align-items: center; */
+  /* flex-direction: row-reverse; */
 }
 
 .img{
   width: 700px;
   height: 525px;
+  opacity: 0.5;
+  position: absolute;
+  border: #0f0 5px dashed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  margin: auto;
 }
 .point{
+      /* border: springgreen 10px dashed; */
       background-color: #fa0;
       width: 350px;
       height: 525px;
+      position: relative;
+      /* left: -25%; */
+      /* top: 3%; */
+      /* display: flex; */
+      /* flex-direction: column; */
+}
+.point h2{
+  /* height: 175px; */
+  /* flex-grow: 1; */
+  /* background-color: #bbb; */
+}
+.point p{
+  /* height: 350px; */
+  /* flex-grow: 2; */
+  /* background-color: #f00; */
 }
 
 .bgc{
       width: 440px;
       height: 350px;
       background-color: #aaa;
-}
+      /* position: absolute; */
+      /* top: 10%; */
+      /* right: 25%; */
+      /* position: relative; */
+      /* top: 10%; */
+      /* left: 10%; */
+    }
+
 
 
