使用 px 調整 point 30% 處， 切齊 img 上緣的位置

--- a/toyota.css
+++ b/toyota.css
@@ -29,16 +29,15 @@
   z-index: 0;
 }
 .point{
-      /* border: springgreen 10px dashed; */
-      background-color: #fa0;
-      width: 350px;
-      height: 525px;
-      position: relative;
-      /* left: -25%; */
-      /* top: 3%; */
-      display: flex;
-      flex-direction: column;
-      z-index: 1;
+  /* border: springgreen 10px dashed; */
+  background-color: #fa0;
+  width: 350px;
+  height: 525px;
+  position: relative;
+  top: 35px;
+  display: flex;
+  flex-direction: column;
+  z-index: 1;
 }
 .point h2{
   /* height: 175px; */
@@ -55,9 +54,6 @@
       width: 440px;
       height: 350px;
       background-color: #aaa;
-      /* position: absolute; */
-      /* top: 10%; */
-      /* right: 25%; */
       position: relative;
       top: -120%;
       right: -50%;
