--- a/toyota.css
+++ b/toyota.css
@@ -67,6 +67,9 @@
   height: 500px;
   background-color: #ddd;
   width: 560px;
+  
+  margin-top: 70%;
+  margin-left: -30%;
 }
     /* .title{
       display: flex;
