--- a/toyota.css
+++ b/toyota.css
@@ -34,7 +34,7 @@
   width: 350px;
   height: 525px;
   position: relative;
-  top: 100px;
+  top: 85px;
   display: flex;
   flex-direction: column;
   z-index: 1;
@@ -75,7 +75,6 @@
 .title{
   display: flex;
   line-height: 48px;
-  border: deeppink 1px dashed;
   padding: 10px;
 }
 .title p{
@@ -90,6 +89,12 @@
   border-top: 1px #000 solid;
   flex-grow: 1;
 } 
+
+.detail{
+  padding: 10px;
+  line-height: 30px;
+}
+
 
     
 
