--- a/toyota.css
+++ b/toyota.css
@@ -38,6 +38,7 @@
   display: flex;
   flex-direction: column;
   z-index: 1;
+  opacity: .1;
 }
 .point h2{
   /* height: 175px; */
@@ -48,6 +49,7 @@
   /* height: 350px; */
   flex-grow: 2;
   background-color: #f00;
+  opacity: .1;
 }
 
 .bgc{
@@ -68,8 +70,10 @@
   background-color: #ddd;
   width: 560px;
   
-  margin-top: 70%;
-  margin-left: -30%;
+  top: 70%;
+  left: -30%;
+  /* margin-top: 70%; */
+  /* margin-left: -30%; */
 }
 
 .title{
@@ -95,8 +99,26 @@
   line-height: 30px;
 }
 
+.icon{
+  width: 60px;
+  height: 40px;
+  background-color: #f00;
+  /* position: relative; */
+  /* right: 50%; */
+  /* bottom: 40%; */
 
-    
+  z-index: 1;
+}
+.triangle{
+  height: 0;
+  border-top: transparent 12px solid;
+  border-left: #fff 24px solid;
+  border-bottom: transparent 12px solid;
+
+  position: relative;
+  top: 20%;
+  margin-left: 35%;
+}
 
 
 
