--- a/toyota.css
+++ b/toyota.css
@@ -72,8 +72,6 @@
   
   top: 70%;
   left: -30%;
-  /* margin-top: 70%; */
-  /* margin-left: -30%; */
 }
 
 .title{
@@ -103,9 +101,11 @@
   width: 60px;
   height: 40px;
   background-color: #f00;
-  /* position: relative; */
-  /* right: 50%; */
-  /* bottom: 40%; */
+  position: relative;
+  /* left: 82%; */
+  /* left: -82%; */
+  right: -82%;
+  bottom: 20%;
 
   z-index: 1;
 }
