新增 .wrap 區塊，調整 .point 文字大小，因數字字體大小切到標題。 因 .img 為 absolute 關係，第2區塊 .wrap 的 .img 定位在第1區塊上，在 .wrap設定relative，使各區塊的 .img 都能定位在各自的 .wrap上。

--- a/toyota.css
+++ b/toyota.css
@@ -10,6 +10,7 @@
   border: orange 3px solid;
   display: flex;
   flex-wrap: wrap;
+  position: relative;
 }
 .img{
   width: 700px;
@@ -33,14 +34,14 @@
 .point h2{
   height: 175px;
   background-color: #f00;
-  font-size: 64px;
+  font-size: 60px;
   line-height: 175px;
   text-align: center;
 }
 .point .slg{
   display: block;
   font-weight: 700;
-  font-size: 32px;
+  font-size: 28px;
   line-height: 48px;
 }
 .point p{
