新增：flex-main > 設定 header > .search css
- header 新增 class name: header, 便於選取器選取
- .header display: flex; 子物件: 橫排 & 轉型成 block
- :nth-child(n) , 子層都是 div , search, main_logo, signature 都會被選取到, 更改共同項目-寫在裡面

- .serch display: flex; 子物件: 橫排 & 轉型成 block; 超連結不需要轉成 block, 已經被強制轉成 block
- align-self, 自訂圖片容器對齊位置
- margin-right, 區隔圖片容器和文字容器, 猶於圖片區塊是一個超連結, 使用 margin 推開, 空白處不會出現點擊效果

--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -1,3 +1,46 @@
+.container{
+  width: 100%;
+}
+/* header */
+.container .header{
+  background-color: #ccc;
+
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.container .header:nth-child(n){
+  font-size: 12px;
+  padding: 10px;
+}
+
+/* search */
+.container .header .search{
+  flex-grow: 1;
+  display: flex;
+}
+
+.container .header .search .serch_icon{
+  align-self: center;
+  margin-right: 10px;
+  text-decoration: none;
+}
+
+.container .header .search .serch_icon img{
+vertical-align: middle;
+}
+.container .header .search .search_text span{
+  display: block;
+}
+
+/* .container .header .search,
+.container .header .main_logo,
+.container .header .signature{
+  flex-grow: 1;
+} */
+
+
 .main_logo .main_logo_pic{
   display: block;
 }
