--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -67,3 +67,26 @@ text-align: end;
 .header .signature .initiative img{
   vertical-align: middle;
 }
+
+/* nav_bar */
+.nav_bar{
+  background-color: #a8a;
+
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.nav_bar .intro_link, .nav_bar .nav_list, .nav_bar .business-link{
+  /* flex-grow: 1; */
+  font-size: 16px;
+  padding: 10px 0;
+  /* margin-right: auto; */
+  /* margin-left: auto; */
+}
+
+.nav_bar .intro_link a{
+  display: block;
+  text-decoration: none;
+  color: #d55;
+}
+
