--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -69,7 +69,7 @@ text-align: end;
 }
 
 /* nav_bar */
-.nav_bar{
+.container .nav_bar{
   background-color: #a8a;
 
   width: 100%;
@@ -77,16 +77,13 @@ text-align: end;
   flex-wrap: wrap;
 }
 .nav_bar .intro_link, .nav_bar .nav_list, .nav_bar .business-link{
-  /* flex-grow: 1; */
+  flex-grow: 1;
   font-size: 16px;
-  padding: 10px 0;
-  /* margin-right: auto; */
-  /* margin-left: auto; */
+  padding: 10px;
 }
 
 .nav_bar .intro_link a{
-  display: block;
+  display: inline-block;
   text-decoration: none;
   color: #d55;
 }
-
