新增：flex-main > 設定 nav_bar > .nav_list css
- .nav_list 內含多個超連結, 使用flex +  margin-right: auto; 和 margin-left: auto; 製作水平分散對齊
- .nav_list 和 .business-link 超連結外觀相仿, 一併處理外觀設定

--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -87,3 +87,18 @@ text-align: end;
   text-decoration: none;
   color: #d55;
 }
+
+/* nav_list */
+.nav_bar .nav_list{
+  display: flex;
+  flex-wrap: wrap;
+}
+.nav_bar .nav_list a{
+  margin-right: auto;
+  margin-left: auto;
+}
+.nav_bar .nav_list a,
+.nav_bar .business-link a{
+  text-decoration: none;
+  color: #000;
+}
