新增：flex-main > 設定 nav_bar > .business-link css
偽選取器要跟對 “物件” 跟錯物件，點擊效果消失:
- .nav_bar .business-link::after  -> error
- .nav_bar .business-link a::after -> ok

- flex-grow 撐開寬度, 造成空白處有點擊效果; 超連結改成 inline-block, 點擊範圍鎖定在文字上.
- 圖片使用 vertical-align 對齊

--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -102,3 +102,20 @@ text-align: end;
   text-decoration: none;
   color: #000;
 }
+
+/* business-link */
+.nav_bar .business-link{
+  text-align: end;
+}
+.nav_bar .business-link a{
+  display: inline-block;
+}
+
+.nav_bar .business-link a::after{
+  content: '';
+  padding-left: 20px;
+  background-image: url("linkout.svg");
+  background-size: 16px 16px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+}
