新增：flex-main > 設定 .main_visul > .main_visul_pic and .main_visul_text
- 設定兩區塊佔有的寬度比例
- 用 flex，兩區塊橫排
- margin 空出兩區塊之間的空間

--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -148,3 +148,21 @@ text-align: end;
 .main_title_group .main_slogan span{
   display: block;
 }
+
+/* main_visul */
+.main_visul{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+.main_visul .main_visul_pic{
+  width: 65%;
+  margin-right: auto;
+}
+.main_visul .main_visul_text{
+  width: 30%;
+  margin-left: auto;
+}
+.main_visul .main_visul_pic img{
+  width: 100%;
+}
