新增：flex-main > 設定 .main_visul > .main_visul_text
- 設定文字 icon 置放位置, padding-top and padding-bottom
- 用 flex，改變 span 為 block; 使每個 span 都有獨自空間
- -webkit-writing-mode and writing-mode 調整文字書寫方式
- margin-right and margin-left 製造出文字區塊的置中效果

--- a/marathon/flex-main.css
+++ b/marathon/flex-main.css
@@ -159,10 +159,31 @@ text-align: end;
   width: 65%;
   margin-right: auto;
 }
+.main_visul .main_visul_pic img{
+  width: 100%;
+}
+
 .main_visul .main_visul_text{
   width: 30%;
   margin-left: auto;
 }
-.main_visul .main_visul_pic img{
-  width: 100%;
+.main_visul .main_visul_text .main_visul_text_icon{
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
 }
+
+.main_visul .texr_content p{
+  display: flex;
+  flex-wrap: wrap;
+
+  -webkit-writing-mode: vertical-rl;
+  writing-mode: vertical-rl;
+  line-height: 24px;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
+/* main_visul_cap */
+
